--- a/backend/package.json
+++ b/backend/package.json
@@ -11,8 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "connect-flash": "^0.1.1",
+    "crypto-js": "^4.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "method-override": "^3.0.0"
+    "method-override": "^3.0.0",
+    "mongoose": "^5.12.7"
   }
 }
